# proyecto-divisas

./: .gitignore  README.md  main.py  pyproject.toml
api/banxico-cetes/: Dockerfile  lambda_function.py  requirements.txt
api/banxico-divisas/: Dockerfile  api_banxico.py  lambda_function.py  requirements.txt
cleaning/banxico/: Dockerfile  lambda_function.py  requirements.txt
cleaning/klar/: lambda_function.py  requirements.txt
cleaning/nu/: lambda_function.py
cleaning/stori/: lambda_function.py  requirements.txt
fact-build/: rates.py
playground/: scrape_from_s3.py
scrapping/banamex/: CHANGES.md  DEPLOYMENT.md  Dockerfile  README.md  TROUBLESHOOTING.md  lambda_function.py  requirements.txt  scrape_banamex.py
scrapping/banregio/: scrape_banregio.py
scrapping/bbva/: scrape_bbva.py
scrapping/klar/: lambda_function.py
scrapping/nu/: Dockerfile  lambda_function.py
scrapping/stori/: lambda_function.py  requirements.txt
scrapping/wise/: lambda_function.py
